--- a/BouncyDouncy.csproj
+++ b/BouncyDouncy.csproj
@@ -46,8 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="directionEnum.cs" />
-    <Compile Include="EnemyObject.cs" />
+    <Compile Include="EnumDirection.cs" />
     <Compile Include="EnumObjectType.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,9 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FriendObject.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="IObjectType.cs" />
     <Compile Include="mainMovement.cs" />
     <Compile Include="moveDown.cs" />
     <Compile Include="moveLeft.cs" />
@@ -65,7 +62,7 @@
     <Compile Include="moveUpDown.cs" />
     <Compile Include="moveWithKeyBoard.cs" />
     <Compile Include="ObjectFactory.cs" />
-    <Compile Include="PlatformObjects.cs" />
+    <Compile Include="GameObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -82,7 +79,6 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
